--- a/model_development.ipynb
+++ b/model_development.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Feature engineering\n",
+    "# Feature extraction\n",
     "X = data.drop(columns=['household_id', 'purchase_battery'])\n",
     "X = pd.get_dummies(X, columns=['battery_type'], drop_first=True)\n",
     "y = data['purchase_battery']\n",
