--- a/model_development.ipynb
+++ b/model_development.ipynb
@@ -19,6 +19,258 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>household_id</th>\n",
+       "      <th>grid_reliability</th>\n",
+       "      <th>avg_power_outage_duration</th>\n",
+       "      <th>peak_power_requirement</th>\n",
+       "      <th>off_peak_power_requirement</th>\n",
+       "      <th>solar_generation_capacity</th>\n",
+       "      <th>excess_electricity</th>\n",
+       "      <th>battery_capacity</th>\n",
+       "      <th>battery_type</th>\n",
+       "      <th>purchase_battery</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.874908</td>\n",
+       "      <td>0.157146</td>\n",
+       "      <td>7.136253</td>\n",
+       "      <td>1.206727</td>\n",
+       "      <td>3.928115</td>\n",
+       "      <td>4.188970</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Lithium-ion</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.990143</td>\n",
+       "      <td>3.182052</td>\n",
+       "      <td>2.673120</td>\n",
+       "      <td>3.125419</td>\n",
+       "      <td>11.122976</td>\n",
+       "      <td>3.216578</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Lithium-ion</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.946399</td>\n",
+       "      <td>1.571780</td>\n",
+       "      <td>3.293030</td>\n",
+       "      <td>3.162540</td>\n",
+       "      <td>7.547271</td>\n",
+       "      <td>1.857166</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Lithium-ion</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4</td>\n",
+       "      <td>0.919732</td>\n",
+       "      <td>2.542853</td>\n",
+       "      <td>9.188434</td>\n",
+       "      <td>3.549720</td>\n",
+       "      <td>10.438117</td>\n",
+       "      <td>4.882770</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Lithium-ion</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.831204</td>\n",
+       "      <td>4.537832</td>\n",
+       "      <td>6.851432</td>\n",
+       "      <td>3.904365</td>\n",
+       "      <td>5.880446</td>\n",
+       "      <td>4.108387</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Lead-acid</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>96</td>\n",
+       "      <td>0.898759</td>\n",
+       "      <td>1.746048</td>\n",
+       "      <td>6.177946</td>\n",
+       "      <td>4.723029</td>\n",
+       "      <td>6.180170</td>\n",
+       "      <td>2.843770</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Lithium-ion</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>97</td>\n",
+       "      <td>0.904547</td>\n",
+       "      <td>3.629778</td>\n",
+       "      <td>8.159948</td>\n",
+       "      <td>4.433651</td>\n",
+       "      <td>8.252905</td>\n",
+       "      <td>4.005346</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Lithium-ion</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>97</th>\n",
+       "      <td>98</td>\n",
+       "      <td>0.885508</td>\n",
+       "      <td>4.485551</td>\n",
+       "      <td>3.726568</td>\n",
+       "      <td>2.715976</td>\n",
+       "      <td>3.699612</td>\n",
+       "      <td>1.033919</td>\n",
+       "      <td>15</td>\n",
+       "      <td>Lithium-ion</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>98</th>\n",
+       "      <td>99</td>\n",
+       "      <td>0.805084</td>\n",
+       "      <td>4.435432</td>\n",
+       "      <td>6.983124</td>\n",
+       "      <td>4.003484</td>\n",
+       "      <td>11.769553</td>\n",
+       "      <td>1.153734</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Lithium-ion</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>99</th>\n",
+       "      <td>100</td>\n",
+       "      <td>0.821578</td>\n",
+       "      <td>3.899378</td>\n",
+       "      <td>2.682780</td>\n",
+       "      <td>4.018171</td>\n",
+       "      <td>11.875897</td>\n",
+       "      <td>0.245212</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Lithium-ion</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>100 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    household_id  grid_reliability  avg_power_outage_duration  \\\n",
+       "0              1          0.874908                   0.157146   \n",
+       "1              2          0.990143                   3.182052   \n",
+       "2              3          0.946399                   1.571780   \n",
+       "3              4          0.919732                   2.542853   \n",
+       "4              5          0.831204                   4.537832   \n",
+       "..           ...               ...                        ...   \n",
+       "95            96          0.898759                   1.746048   \n",
+       "96            97          0.904547                   3.629778   \n",
+       "97            98          0.885508                   4.485551   \n",
+       "98            99          0.805084                   4.435432   \n",
+       "99           100          0.821578                   3.899378   \n",
+       "\n",
+       "    peak_power_requirement  off_peak_power_requirement  \\\n",
+       "0                 7.136253                    1.206727   \n",
+       "1                 2.673120                    3.125419   \n",
+       "2                 3.293030                    3.162540   \n",
+       "3                 9.188434                    3.549720   \n",
+       "4                 6.851432                    3.904365   \n",
+       "..                     ...                         ...   \n",
+       "95                6.177946                    4.723029   \n",
+       "96                8.159948                    4.433651   \n",
+       "97                3.726568                    2.715976   \n",
+       "98                6.983124                    4.003484   \n",
+       "99                2.682780                    4.018171   \n",
+       "\n",
+       "    solar_generation_capacity  excess_electricity  battery_capacity  \\\n",
+       "0                    3.928115            4.188970                 5   \n",
+       "1                   11.122976            3.216578                10   \n",
+       "2                    7.547271            1.857166                10   \n",
+       "3                   10.438117            4.882770                 5   \n",
+       "4                    5.880446            4.108387                10   \n",
+       "..                        ...                 ...               ...   \n",
+       "95                   6.180170            2.843770                10   \n",
+       "96                   8.252905            4.005346                15   \n",
+       "97                   3.699612            1.033919                15   \n",
+       "98                  11.769553            1.153734                 5   \n",
+       "99                  11.875897            0.245212                10   \n",
+       "\n",
+       "   battery_type  purchase_battery  \n",
+       "0   Lithium-ion                 1  \n",
+       "1   Lithium-ion                 1  \n",
+       "2   Lithium-ion                 0  \n",
+       "3   Lithium-ion                 0  \n",
+       "4     Lead-acid                 1  \n",
+       "..          ...               ...  \n",
+       "95  Lithium-ion                 0  \n",
+       "96  Lithium-ion                 1  \n",
+       "97  Lithium-ion                 0  \n",
+       "98  Lithium-ion                 0  \n",
+       "99  Lithium-ion                 0  \n",
+       "\n",
+       "[100 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
