updated with models

--- a/data_collection.ipynb
+++ b/data_collection.ipynb
@@ -2,35 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "# Simulate data\n",
+    "# Just getting random data to create a dataset\n",
     "np.random.seed(42)\n",
     "data = pd.DataFrame({\n",
     "    'household_id': range(1, 101),\n",
-    "    'grid_reliability': np.random.uniform(0.8, 1.0, 100),  # 0 to 1 scale\n",
-    "    'avg_power_outage_duration': np.random.uniform(0, 5, 100),  # in hours per month\n",
-    "    'peak_power_requirement': np.random.uniform(2, 10, 100),  # in kW\n",
-    "    'off_peak_power_requirement': np.random.uniform(1, 5, 100),  # in kW\n",
-    "    'solar_generation_capacity': np.random.uniform(3, 12, 100),  # in kW\n",
-    "    'excess_electricity': np.random.uniform(0, 6, 100),  # in kWh\n",
-    "    'battery_capacity': np.random.choice([5, 10, 15], 100),  # in kWh\n",
+    "    'grid_reliability': np.random.uniform(0.8, 1.0, 100),  # Uniform distribution between 0.8 and 1.0\n",
+    "    'avg_power_outage_duration': np.random.normal(2, 1, 100),  # Normal distribution with mean 2 and std 1\n",
+    "    'peak_power_requirement': np.random.uniform(2, 10, 100),  # Uniform distribution between 2 and 10\n",
+    "    'off_peak_power_requirement': np.random.uniform(1, 5, 100),  # Uniform distribution between 1 and 5\n",
+    "    'solar_generation_capacity': np.random.normal(7, 2, 100),  # Normal distribution with mean 7 and std 2\n",
+    "    'excess_electricity': np.random.uniform(0, 6, 100),  # Uniform distribution between 0 and 6\n",
+    "    'battery_capacity': np.random.normal(10, 3, 100),  # Normal distribution with mean 10 and std 3\n",
     "    'battery_type': np.random.choice(['Lithium-ion', 'Lead-acid'], 100),\n",
-    "    'purchase_battery': np.random.choice([0, 1], 100)  # 0: No, 1: Yes\n",
+    "    'purchase_battery': np.random.choice([0, 1], 100)  # Binary choice: 0 or 1\n",
     "})\n",
     "\n",
     "data.to_csv('prosumer_data.csv', index=False)\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -71,64 +72,64 @@
        "      <th>0</th>\n",
        "      <td>1</td>\n",
        "      <td>0.874908</td>\n",
-       "      <td>0.157146</td>\n",
-       "      <td>7.136253</td>\n",
-       "      <td>1.206727</td>\n",
-       "      <td>3.928115</td>\n",
-       "      <td>4.188970</td>\n",
-       "      <td>5</td>\n",
+       "      <td>2.087047</td>\n",
+       "      <td>8.358490</td>\n",
+       "      <td>2.423891</td>\n",
+       "      <td>7.825863</td>\n",
+       "      <td>5.174182</td>\n",
+       "      <td>10.811370</td>\n",
        "      <td>Lithium-ion</td>\n",
-       "      <td>1</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>2</td>\n",
        "      <td>0.990143</td>\n",
-       "      <td>3.182052</td>\n",
-       "      <td>2.673120</td>\n",
-       "      <td>3.125419</td>\n",
-       "      <td>11.122976</td>\n",
-       "      <td>3.216578</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Lithium-ion</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.700993</td>\n",
+       "      <td>6.021097</td>\n",
+       "      <td>4.031384</td>\n",
+       "      <td>5.872551</td>\n",
+       "      <td>5.697124</td>\n",
+       "      <td>9.849286</td>\n",
+       "      <td>Lead-acid</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>3</td>\n",
        "      <td>0.946399</td>\n",
-       "      <td>1.571780</td>\n",
-       "      <td>3.293030</td>\n",
-       "      <td>3.162540</td>\n",
-       "      <td>7.547271</td>\n",
-       "      <td>1.857166</td>\n",
-       "      <td>10</td>\n",
-       "      <td>Lithium-ion</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2.091761</td>\n",
+       "      <td>6.615231</td>\n",
+       "      <td>1.057574</td>\n",
+       "      <td>5.355559</td>\n",
+       "      <td>0.882441</td>\n",
+       "      <td>9.283156</td>\n",
+       "      <td>Lead-acid</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>4</td>\n",
        "      <td>0.919732</td>\n",
-       "      <td>2.542853</td>\n",
-       "      <td>9.188434</td>\n",
-       "      <td>3.549720</td>\n",
-       "      <td>10.438117</td>\n",
-       "      <td>4.882770</td>\n",
-       "      <td>5</td>\n",
+       "      <td>0.012431</td>\n",
+       "      <td>5.940142</td>\n",
+       "      <td>1.464291</td>\n",
+       "      <td>7.487374</td>\n",
+       "      <td>5.559526</td>\n",
+       "      <td>7.277309</td>\n",
        "      <td>Lithium-ion</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>5</td>\n",
        "      <td>0.831204</td>\n",
-       "      <td>4.537832</td>\n",
-       "      <td>6.851432</td>\n",
-       "      <td>3.904365</td>\n",
-       "      <td>5.880446</td>\n",
-       "      <td>4.108387</td>\n",
-       "      <td>10</td>\n",
+       "      <td>1.780328</td>\n",
+       "      <td>3.561944</td>\n",
+       "      <td>1.184011</td>\n",
+       "      <td>7.489933</td>\n",
+       "      <td>2.952698</td>\n",
+       "      <td>8.269686</td>\n",
        "      <td>Lead-acid</td>\n",
        "      <td>1</td>\n",
        "    </tr>\n",
@@ -149,12 +150,12 @@
        "      <th>95</th>\n",
        "      <td>96</td>\n",
        "      <td>0.898759</td>\n",
-       "      <td>1.746048</td>\n",
-       "      <td>6.177946</td>\n",
-       "      <td>4.723029</td>\n",
-       "      <td>6.180170</td>\n",
-       "      <td>2.843770</td>\n",
-       "      <td>10</td>\n",
+       "      <td>1.184190</td>\n",
+       "      <td>7.903175</td>\n",
+       "      <td>3.198116</td>\n",
+       "      <td>8.435085</td>\n",
+       "      <td>1.710571</td>\n",
+       "      <td>15.630387</td>\n",
        "      <td>Lithium-ion</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -162,38 +163,38 @@
        "      <th>96</th>\n",
        "      <td>97</td>\n",
        "      <td>0.904547</td>\n",
-       "      <td>3.629778</td>\n",
-       "      <td>8.159948</td>\n",
-       "      <td>4.433651</td>\n",
-       "      <td>8.252905</td>\n",
-       "      <td>4.005346</td>\n",
-       "      <td>15</td>\n",
-       "      <td>Lithium-ion</td>\n",
-       "      <td>1</td>\n",
+       "      <td>1.922898</td>\n",
+       "      <td>6.434832</td>\n",
+       "      <td>2.766122</td>\n",
+       "      <td>10.004714</td>\n",
+       "      <td>1.040242</td>\n",
+       "      <td>7.678632</td>\n",
+       "      <td>Lead-acid</td>\n",
+       "      <td>0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
        "      <td>98</td>\n",
        "      <td>0.885508</td>\n",
-       "      <td>4.485551</td>\n",
-       "      <td>3.726568</td>\n",
-       "      <td>2.715976</td>\n",
-       "      <td>3.699612</td>\n",
-       "      <td>1.033919</td>\n",
-       "      <td>15</td>\n",
+       "      <td>2.341152</td>\n",
+       "      <td>6.893766</td>\n",
+       "      <td>4.550817</td>\n",
+       "      <td>7.148190</td>\n",
+       "      <td>5.380593</td>\n",
+       "      <td>6.266036</td>\n",
        "      <td>Lithium-ion</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
        "      <td>99</td>\n",
        "      <td>0.805084</td>\n",
-       "      <td>4.435432</td>\n",
-       "      <td>6.983124</td>\n",
-       "      <td>4.003484</td>\n",
-       "      <td>11.769553</td>\n",
-       "      <td>1.153734</td>\n",
-       "      <td>5</td>\n",
+       "      <td>2.276691</td>\n",
+       "      <td>5.356800</td>\n",
+       "      <td>2.403660</td>\n",
+       "      <td>10.257231</td>\n",
+       "      <td>0.481402</td>\n",
+       "      <td>4.663839</td>\n",
        "      <td>Lithium-ion</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
@@ -201,14 +202,14 @@
        "      <th>99</th>\n",
        "      <td>100</td>\n",
        "      <td>0.821578</td>\n",
-       "      <td>3.899378</td>\n",
-       "      <td>2.682780</td>\n",
-       "      <td>4.018171</td>\n",
-       "      <td>11.875897</td>\n",
-       "      <td>0.245212</td>\n",
-       "      <td>10</td>\n",
+       "      <td>2.827183</td>\n",
+       "      <td>3.981848</td>\n",
+       "      <td>1.468268</td>\n",
+       "      <td>4.239797</td>\n",
+       "      <td>3.147068</td>\n",
+       "      <td>14.488133</td>\n",
        "      <td>Lithium-ion</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -217,61 +218,61 @@
       ],
       "text/plain": [
        "    household_id  grid_reliability  avg_power_outage_duration  \\\n",
-       "0              1          0.874908                   0.157146   \n",
-       "1              2          0.990143                   3.182052   \n",
-       "2              3          0.946399                   1.571780   \n",
-       "3              4          0.919732                   2.542853   \n",
-       "4              5          0.831204                   4.537832   \n",
+       "0              1          0.874908                   2.087047   \n",
+       "1              2          0.990143                   1.700993   \n",
+       "2              3          0.946399                   2.091761   \n",
+       "3              4          0.919732                   0.012431   \n",
+       "4              5          0.831204                   1.780328   \n",
        "..           ...               ...                        ...   \n",
-       "95            96          0.898759                   1.746048   \n",
-       "96            97          0.904547                   3.629778   \n",
-       "97            98          0.885508                   4.485551   \n",
-       "98            99          0.805084                   4.435432   \n",
-       "99           100          0.821578                   3.899378   \n",
+       "95            96          0.898759                   1.184190   \n",
+       "96            97          0.904547                   1.922898   \n",
+       "97            98          0.885508                   2.341152   \n",
+       "98            99          0.805084                   2.276691   \n",
+       "99           100          0.821578                   2.827183   \n",
        "\n",
        "    peak_power_requirement  off_peak_power_requirement  \\\n",
-       "0                 7.136253                    1.206727   \n",
-       "1                 2.673120                    3.125419   \n",
-       "2                 3.293030                    3.162540   \n",
-       "3                 9.188434                    3.549720   \n",
-       "4                 6.851432                    3.904365   \n",
+       "0                 8.358490                    2.423891   \n",
+       "1                 6.021097                    4.031384   \n",
+       "2                 6.615231                    1.057574   \n",
+       "3                 5.940142                    1.464291   \n",
+       "4                 3.561944                    1.184011   \n",
        "..                     ...                         ...   \n",
-       "95                6.177946                    4.723029   \n",
-       "96                8.159948                    4.433651   \n",
-       "97                3.726568                    2.715976   \n",
-       "98                6.983124                    4.003484   \n",
-       "99                2.682780                    4.018171   \n",
+       "95                7.903175                    3.198116   \n",
+       "96                6.434832                    2.766122   \n",
+       "97                6.893766                    4.550817   \n",
+       "98                5.356800                    2.403660   \n",
+       "99                3.981848                    1.468268   \n",
        "\n",
        "    solar_generation_capacity  excess_electricity  battery_capacity  \\\n",
-       "0                    3.928115            4.188970                 5   \n",
-       "1                   11.122976            3.216578                10   \n",
-       "2                    7.547271            1.857166                10   \n",
-       "3                   10.438117            4.882770                 5   \n",
-       "4                    5.880446            4.108387                10   \n",
+       "0                    7.825863            5.174182         10.811370   \n",
+       "1                    5.872551            5.697124          9.849286   \n",
+       "2                    5.355559            0.882441          9.283156   \n",
+       "3                    7.487374            5.559526          7.277309   \n",
+       "4                    7.489933            2.952698          8.269686   \n",
        "..                        ...                 ...               ...   \n",
-       "95                   6.180170            2.843770                10   \n",
-       "96                   8.252905            4.005346                15   \n",
-       "97                   3.699612            1.033919                15   \n",
-       "98                  11.769553            1.153734                 5   \n",
-       "99                  11.875897            0.245212                10   \n",
+       "95                   8.435085            1.710571         15.630387   \n",
+       "96                  10.004714            1.040242          7.678632   \n",
+       "97                   7.148190            5.380593          6.266036   \n",
+       "98                  10.257231            0.481402          4.663839   \n",
+       "99                   4.239797            3.147068         14.488133   \n",
        "\n",
        "   battery_type  purchase_battery  \n",
-       "0   Lithium-ion                 1  \n",
-       "1   Lithium-ion                 1  \n",
-       "2   Lithium-ion                 0  \n",
-       "3   Lithium-ion                 0  \n",
+       "0   Lithium-ion                 0  \n",
+       "1     Lead-acid                 0  \n",
+       "2     Lead-acid                 1  \n",
+       "3   Lithium-ion                 1  \n",
        "4     Lead-acid                 1  \n",
        "..          ...               ...  \n",
        "95  Lithium-ion                 0  \n",
-       "96  Lithium-ion                 1  \n",
-       "97  Lithium-ion                 0  \n",
+       "96    Lead-acid                 0  \n",
+       "97  Lithium-ion                 1  \n",
        "98  Lithium-ion                 0  \n",
-       "99  Lithium-ion                 0  \n",
+       "99  Lithium-ion                 1  \n",
        "\n",
        "[100 rows x 10 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
