--- a/model_development.ipynb
+++ b/model_development.ipynb
@@ -287,6 +287,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Now we will check with the Logistic Regression model to test the whole thing"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -346,6 +353,13 @@
     "# Save model and scaler\n",
     "joblib.dump(model, 'logistic_regression_model.pkl')\n",
     "joblib.dump(scaler, 'scaler.pkl')\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# We can use SVM model to predict also the whole thing but for a rough note I am just testing the Logistic Regression model."
    ]
   },
   {
