--- a/different_models.ipynb
+++ b/different_models.ipynb
@@ -107,7 +107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# We can see support vector machine has the highest accuracy."
+    "# We can see support vector machine has the highest accuracy of 65%"
    ]
   },
   {
